fixed the overflowing thumbnails in IE7 on news landing page

--- a/assets/css/src/content/news_landing/_main.scss
+++ b/assets/css/src/content/news_landing/_main.scss
@@ -48,7 +48,6 @@
     .thumbnail-container {
       float: left;
       width: 150px;
-      height: 100px;
       margin-right: 20px;
 
       .news-link {
