--- a/assets/css/src/ie/news_landing.scss
+++ b/assets/css/src/ie/news_landing.scss
@@ -2,4 +2,8 @@
   .news-item {
     clear: both;
   }
+
+  .ie-clear {
+    clear: both;
+  }
 }
