--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2333,31 +2333,30 @@ form .form-row {
   .template-news-landing .template-container .news-item .thumbnail-container {
     float: left;
     width: 150px;
-    height: 100px;
     margin-right: 20px; }
-    /* line 54, src/content/news_landing/_main.scss */
+    /* line 53, src/content/news_landing/_main.scss */
     .template-news-landing .template-container .news-item .thumbnail-container .news-link {
       display: block; }
-    /* line 58, src/content/news_landing/_main.scss */
+    /* line 57, src/content/news_landing/_main.scss */
     .template-news-landing .template-container .news-item .thumbnail-container img {
       display: block;
       max-width: 100%; }
-  /* line 64, src/content/news_landing/_main.scss */
+  /* line 63, src/content/news_landing/_main.scss */
   .template-news-landing .template-container .news-item .content {
     overflow: hidden; }
-  /* line 69, src/content/news_landing/_main.scss */
+  /* line 68, src/content/news_landing/_main.scss */
   .template-news-landing .template-container .news-item .meta span {
     color: #6f777b; }
-  /* line 74, src/content/news_landing/_main.scss */
+  /* line 73, src/content/news_landing/_main.scss */
   .template-news-landing .template-container .news-item .title {
     margin-top: 0px;
     margin-bottom: 0px; }
-  /* line 80, src/content/news_landing/_main.scss */
+  /* line 79, src/content/news_landing/_main.scss */
   .template-news-landing .template-container .news-item .excerpt {
     margin-top: 10px; }
 
 @media (min-width: 0) and (max-width: 767px) {
-  /* line 89, src/content/news_landing/_main.scss */
+  /* line 88, src/content/news_landing/_main.scss */
   .page-news .news-item .thumbnail-container {
     float: none;
     margin-bottom: 10px; } }
